Fixed annoying scrolling bug on mobile

--- a/src/app/components/install-widget/install-widget.component.less
+++ b/src/app/components/install-widget/install-widget.component.less
@@ -1,3 +1,8 @@
+:host {
+    flex: 1;
+    overflow: hidden;
+}
+
 .nav-install-row {
     cursor: pointer;
     width: 100%;
