--- a/src/less/nault-theme.less
+++ b/src/less/nault-theme.less
@@ -62,20 +62,21 @@ h1, h2, h3, h4, h5, .uk-text-lead, .uk-button, .uk-alert, .uk-description-list d
 }
 
 .app-grid {
+    position: relative;
 	margin-top: 0;
 	overflow: hidden;
 	margin-left: 0;
-	min-height: calc(100vh);
-	max-height: calc(100vh);
+    height: 100vh;
+    height: var(--vh, 100vh);
 
 	@media (max-width: 639px) {
-		min-height: calc(100vh - @mobile-top-bar-height);
-		max-height: calc(100vh - @mobile-top-bar-height);
+        height: calc(var(--vh, 100vh) - @mobile-top-bar-height);
 	}
 }
 
 .content-container {
-	min-height: 100%;
+    // height: 100vh;
+    height: var(--vh, 100vh);
 	border-top: 1px solid rgb(220, 233, 249);
 	padding: 0;
 	z-index: 1;
@@ -85,6 +86,7 @@ h1, h2, h3, h4, h5, .uk-text-lead, .uk-button, .uk-alert, .uk-description-list d
 	}
 
 	@media (max-width: 639px) {
+        height: calc(var(--vh, 100vh) - @mobile-top-bar-height);
 		transition: transform 0.5s ease;
 
 		&.nav-expanded {
